--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "nuxt-cname-module": "^1.1.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
